--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.root=info
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/skypro
+spring.datasource.username= skypro
+spring.datasource.password= skupro
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
